[workspace]
resolver = "2"
members = [
    "crates/abi",
    "crates/bloxroute",
    "crates/fourmeme",
    "crates/logging",
    "crates/pancake-v2",
    "crates/rpc",
    "crates/sender",
    "crates/telegram",
    "crates/transaction-stream",
    "crates/types",
    "crates/price-track",
    "crates/price-query",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
readme = "./README.md"
authors = ["Birch <birch17261@gmail.com>"]
repository = "https://github.com/birchrust/fourmeme-kit.git"
homepage = "https://github.com/birchrust/fourmeme-kit"
description = "Fourmeme bot's kit"

[workspace.dependencies]
alloy = { version = "1.0.41", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = { version = "^1.0.100" }
tracing = "0.1.41"
futures = "0.3.31"
dotenvy = "0.15.7"
serde_json = "1.0.145"
reqwest = "0.12.24"
regex = "1.12.2"
once_cell = "1.21.3"
iceoryx2 = "0.7.0"
futures-util = "0.3.31"

rpc = { version = "0.1.0", path = "crates/rpc" }
sender = { version = "0.1.0", path = "crates/sender" }
pancake-v2 = { version = "0.1.0", path = "crates/pancake-v2" }
fourmeme = { version = "0.1.0", path = "crates/fourmeme" }
bloxroute = { version = "0.1.0", path = "crates/bloxroute" }
abi = { version = "0.1.0", path = "crates/abi" }
logging = { version = "0.1.0", path = "crates/logging" }
transaction-stream = { version = "0.1.0", path = "crates/transaction-stream" }
types = { version = "0.1.0", path = "crates/types" }
price-track = { version = "0.1.0", path = "crates/price-track" }
price-query = { version = "0.1.0", path = "crates/price-query" }


[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
