[package]
name = "pancake-v2"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rpc = { workspace = true }
abi = { workspace = true }
sender = { workspace = true }
bloxroute = { workspace = true }
