[package]
name = "transaction-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

thiserror = "2.0.17"
